Load/save tweet cache, various UI improvements

--- a/toot.cabal
+++ b/toot.cabal
@@ -25,7 +25,8 @@ executable toot
                      http-types,
                      authenticate-oauth,
                      twitter-conduit >= 0.1.0,
-                     twitter-types,
+                     twitter-types >= 0.7,
+                     aeson,
                      twitter-types-lens,
                      lens,
                      ini,
