Split up program into modules

--- a/toot.cabal
+++ b/toot.cabal
@@ -17,6 +17,7 @@ executable toot
   build-depends:     base,
                      transformers,
                      monad-logger,
+                     data-default,
                      text,
                      text-icu,
                      bytestring,
