--- a/toot.cabal
+++ b/toot.cabal
@@ -12,7 +12,7 @@ executable toot
   other-modules:     Twitter
   extra-lib-dirs:    /usr/local/opt/icu4c/lib
   include-dirs:      /usr/local/opt/icu4c/include
-  ghc-options:       -threaded -Wall -fno-warn-unused-do-bind
+  ghc-options:       -O3 -threaded -Wall -fno-warn-unused-do-bind
   default-language:  Haskell2010
   build-depends:     base,
                      transformers,
